add deployment and fix swagger
