# internal/app/models/books.go
@@ -1,0 +1,17 @@
+package models
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
+// Book struct to describe book object.
+type Book struct {
+	ID         uuid.UUID `db:"id" json:"id" validate:"required,uuid"`
+	CreatedAt  time.Time `db:"created_at" json:"created_at"`
+	UpdatedAt  time.Time `db:"updated_at" json:"updated_at"`
+	Title      string    `db:"title" json:"title" validate:"required,lte=255"`
+	Author     string    `db:"author" json:"author" validate:"required,lte=255"`
+	BookStatus int       `db:"book_status" json:"book_status" validate:"required,len=1"`
+}
